objects/ReplaceablePartNumberMatrix__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Asset_PN__c</fullName>
        <label>Asset PN</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HDD_PN__c</fullName>
        <label>HDD PN</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVME_PN__c</fullName>
        <label>NVME PN</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_PN__c</fullName>
        <label>PS PN</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_PN__c</fullName>
        <label>Product PN</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSD_PN__c</fullName>
        <label>SSD PN</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Replaceable Part Number Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_PN__c</columns>
        <columns>Asset_PN__c</columns>
        <columns>HDD_PN__c</columns>
        <columns>SSD_PN__c</columns>
        <columns>PS_PN__c</columns>
        <columns>NVME_PN__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>